--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -6,17 +6,9 @@ main:
   - title: "Talks"
     url: /talks/    
 
-  - title: "Teaching"
-    url: /teaching/    
-    
-  - title: "Portfolio"
-    url: /portfolio/
-        
-  - title: "Blog Posts"
-    url: /year-archive/
-    
+  - title: "Honors"
+    url: /honors/    
+  
   - title: "CV"
     url: /cv/
-    
-  - title: "Guide"
-    url: /markdown/
+ 
