--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -3,12 +3,12 @@ main:
   - title: "Publications"
     url: /publications/
 
-  - title: "Talks"
-    url: /talks/    
+  # - title: "Talks"
+  #   url: /talks/    
 
-  - title: "Honors"
-    url: /honors/    
+  # - title: "Honors"
+  #   url: /honors/    
   
-  - title: "CV"
-    url: /cv/
+  # - title: "CV"
+  #   url: /cv/
  
