--- a/_config.yml
+++ b/_config.yml
@@ -83,7 +83,7 @@ author:
   name             : "Leann Thayaparan"
   avatar           : "profile.png"
   bio              : "Operations Research PhD Candidate"
-  location         : "Operations Research Center, MIT"
+  location         : "ORC, MIT"
   employer         :
   pubmed           : 
   googlescholar    : "https://scholar.google.com/citations?user=-1ildgoAAAAJ&hl=en"
