--- a/_config.yml
+++ b/_config.yml
@@ -82,12 +82,12 @@ analytics:
 author:
   name             : "Leann Thayaparan"
   avatar           : "profile.png"
-  bio              : "Operations Research PhD Candidate"
-  location         : "ORC, MIT"
+  bio              : "Assistant Professor"
+  location         : "Carey School of Business, Johns Hopkins University"
   employer         :
   pubmed           : 
   googlescholar    : "https://scholar.google.com/citations?user=-1ildgoAAAAJ&hl=en"
-  email            : "https://mail.google.com/mail/u/0/?fs=1&tf=cm&source=mailto&to=lpgt@mit.edu"
+  email            : "https://mail.google.com/mail/u/0/?fs=1&tf=cm&source=mailto&to=thayaparan@jhu.edu"
   researchgate     :  # example: "https://www.researchgate.net/profile/yourprofile"
   uri              :
   bitbucket        :
