--- a/_config.yml
+++ b/_config.yml
@@ -83,7 +83,7 @@ author:
   name             : "Leann Thayaparan"
   avatar           : "profile.png"
   bio              : "Assistant Professor"
-  location         : "Carey School of Business, Johns Hopkins University"
+  location         : "Carey School of Business, JHU"
   employer         :
   pubmed           : 
   googlescholar    : "https://scholar.google.com/citations?user=-1ildgoAAAAJ&hl=en"
